trans toList (jdk 16) en collect (jdk<16)